# pico-rtos

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  FreeRTOSConfig.h  main.c
